--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,15 +1,10 @@
-.social-bar {
-  width: 8.75rem;
-
-}
-
 nav {
   z-index: 1;
   position: sticky;
   top: 0;
   width: 100%;
   box-sizing: border-box;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   background-color: #0F1118;
   display: flex;
   justify-content: space-between;
@@ -18,11 +13,14 @@ nav {
   .navigation {
     display: flex;
     align-items: center;
-    gap: 6rem;
-    padding-left: 1rem;
-
-    .social-bar {
-
+    gap: 3.5rem;
+  }
+  .hamburger-menu{
+    width: 119px;
+    display: flex;
+    justify-content: center;
+    &:hover{
+      cursor: pointer;
     }
   }
 
@@ -31,7 +29,7 @@ nav {
     display: flex;
     gap: 1rem;
     align-items: center;
-
+    padding-right: 3.75rem;
     .contact {
       a {
         white-space: nowrap;
